ruff linting and formatting

--- a/examples/CRIPT.ipynb
+++ b/examples/CRIPT.ipynb
@@ -8,9 +8,9 @@
    "outputs": [],
    "source": [
     "import jax\n",
-    "jax.config.update('jax_enable_x64', True) # required for ciMIST code to work properly\n",
+    "\n",
+    "jax.config.update(\"jax_enable_x64\", True)  # required for ciMIST code to work properly\n",
     "import cimist as cst\n",
-    "import matplotlib.pyplot as plt\n",
     "import mdtraj as md"
    ]
   },
@@ -215,7 +215,7 @@
    ],
    "source": [
     "# contributions to the conformational entropy\n",
-    "tree.residue_entropies() - 0.5*tree.residue_sum_MIs()"
+    "tree.residue_entropies() - 0.5 * tree.residue_sum_MIs()"
    ]
   },
   {
