fixed ful ruff linting and formatting

--- a/examples/CRIPT.ipynb
+++ b/examples/CRIPT.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8badd6f5-ac73-4112-9683-b477bb65bcdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import jax\n",
-    "\n",
-    "jax.config.update(\"jax_enable_x64\", True)  # required for ciMIST code to work properly\n",
     "import cimist as cst\n",
-    "import mdtraj as md"
+    "import mdtraj as md\n",
+    "\n",
+    "jax.config.update(\"jax_enable_x64\", True)  # required for ciMIST code to work properly"
    ]
   },
   {
