--- a/examples/CRIPT.ipynb
+++ b/examples/CRIPT.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(21.444095196297777)"
+       "np.float64(21.444095196297784)"
       ]
      },
      "execution_count": 3,
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(22.930199241899572)"
+       "np.float64(22.93019924189958)"
       ]
      },
      "execution_count": 5,
@@ -257,7 +257,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x7ffbe0fd9bd0>"
+       "<networkx.classes.graph.Graph at 0x2aac7bf72f10>"
       ]
      },
      "execution_count": 11,
@@ -770,11 +770,19 @@
     "# See cst.entropy for other estimators\n",
     "tree.MI_graph.edges(data=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b157be74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ciMIST",
    "language": "python",
    "name": "python3"
   },
@@ -788,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
